# ema_software_map

./: .gitignore  EMA_Feature_Comparison.csv  EMA_Feature_Comparison.json  EMA_Feature_Map.json  README.md  references.csv  requirements.txt
.github/workflows/: modify_csv.yml  process_feature_json.yml
scripts/: add_new_package.py  process_csv.py  process_json.py
sitemaps/: beiwe.txt  expiwell.txt  m-path.txt  mema.txt  metricwire.txt  movisens.txt
tools/: pyproject.toml
tools/ema_comparison/: ema_comparison.sample.env  manage.py  sitemap.xml  temp.html
tools/ema_comparison/comparison/: admin.py  ai.py  elastic.py  models.py  utils.py
tools/ema_comparison/comparison/management/commands/: init_elastic.py  runspiders.py
tools/ema_comparison/comparison/migrations/: 0001_initial.py  0002_url_ai_summary_url_human_summary_url_name_and_more.py  0003_software_remove_url_software_name_url_software.py  0004_rename_software_name_software_name.py  0005_url_content_hash.py  0006_url_similar_urls_alter_url_ai_summary_and_more.py  0007_url_content_length.py  0008_remove_url_similar_urls_software_exclude_urls_and_more.py  0009_url_similar_urls.py  0010_software_is_monitored_software_notes.py
tools/ema_comparison/ema_comparison/: asgi.py  base_admin.py  settings.py  urls.py  widgets.py  wsgi.py
tools/ema_comparison/scraper/scraper/: settings.py
tools/ema_comparison/scraper/scraper/spiders/: ai.py  elastic.py  sitemap_generator.py  utils.py
